[project]
name = "dutreemap"
version = "0.1.0"
description = "Mini app that shows your disk use in a \"tree map\" which is a good visualization of what takes up space on your disk."
readme = "README.md"
requires-python = ">=3.9"
license = "BSD-2-Clause"
dependencies = []

[project.urls]
Repository = "https://github.com/malthejorgensen/dutreemap"

[project.scripts]
dutreemap = "main:main"

[tool.uv]
package = true
